Changed the package in order to be able to publish it.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/Theme.AgendaApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="goje.contactsapp.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
