--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.agendaapp"
+        applicationId "goje.contactsapp"
         minSdk 26
         targetSdk 33
         versionCode 1
@@ -32,7 +32,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    namespace 'com.example.agendaapp'
+    namespace 'goje.contactsapp'
 }
 
 dependencies {
